[tool.poetry]
name = "romepy"
version = "0.1.0"
description = "Python implementation of the Robust Multi-Modal Density Estimator (ROME)"
authors = ["Anna Meszaros <ana.mesaros@gmail.com>",
            "Julian F. Schumann <julian.frederik.schumann@gmail.com>"]
readme = "README.md"
packages = [{include = "rome"}]

license = "MIT"
repository = "https://github.com/anna-meszaros/ROME"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
scikit-learn = "^1.2.2"
scipy = "^1.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
