[tool.poetry]
name = "romepy"
version = "0.1.3"
description = "Python implementation of the Robust Multi-Modal Density Estimator (ROME)"
authors = ["Anna Meszaros <ana.mesaros@gmail.com>",
            "Julian F. Schumann <julian.frederik.schumann@gmail.com>"]

maintainers = ["anna-meszaros <ana.mesaros@gmail.com>",
               "julianschumann <julian.frederik.schumann@gmail.com>"]

readme = "README.md"
packages = [{include = "rome"}]

license = "MIT"
repository = "https://github.com/anna-meszaros/ROME"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.0"
scikit-learn = "^1.2.2"
scipy = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8= ">=3"
flake8-bugbear = "^22.1.11"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
